  * doc/replaceinit.html: switch http links to https.
  * alloc.c, alloc_re.c, buffer_0.c, byte.h, byte_chr.c, byte_copy.c,
    byte_cr.c, byte_diff.c, byte_rchr.c, select.h2, wait.h, wait_nohang.c,
    wait_pid.c: C23: swap ANSI for remaining K&R-style declarations
    (github/andy-bower).
  * alloc.h, buffer.c, buffer.h, buffer_get.c, buffer_put.c, buffer_write.c,
    byte.h, pathexec_env.c, runit.c, runsv.c, runsvdir.c, select.h1,
    select.h2, sig.c, sig.h, sig_catch.c, svlogd.c, svlogd.dist, wait.h:
    fix build with gcc15: in C23 f() means f(void), consequently signal
    handler functions now are f(int), alloc_free() parameter needs cast,
    buffer_unixwrite() removes "const" from parameter.
  * doc/index.html: repair or remove broken links in list of distributions
    using runit, add Debian GNU/Hurd.
  * doc/*, man/*: switch all cr.yp.to http links to https.
  * doc/faq.html: fix link to LSB core specification.
  * doc/index.html: remove section "Related links".
  * doc/index.html, faq.html: update links to supervision mailing list and
    list archives.
  * doc/benefits.html: remove references to Debian packages.
  * doc/*, man/*, package/README: switch all smarden.org http links to https.
  * check-diff: check that files exist; quote properly.
  * utmpset.c: check length of line argument to match struct utmp; properly
    handle line argument with max length (thx github/Skyb0rg007).
  * doc/index.html: add reference to repository on github.com.
  * doc/faq.html: typo.
  * doc/*.html: !DOCTYPE.
  * doc/index.html: add antiX Linux to the list of distributions (thx C.
    Jarry).
  * hasshsgr.h?, warn-shsgr: remove; obsolete.
  * runit.c: don't leak SIGCONT SIG_IGN into all child processes (thx Leah
    Neukirchen).
  * doc/index.html: fix link to Void Linux (thx R.G.).

2.2.0
Fri, 27 Sep 2024 00:38:25 +0000
  * chpst.dist, sv.dist, svlogd.dist, utmpset.dist: adapt.
  * chpst.c, man/chpst.8: add -C option to change working directory (thx