@@ -14,9 +14,6 @@ This is a collection of <tt>run</tt> scripts for popular services to have
 them monitored by the
 <a href="https://cr.yp.to/daemontools.html">daemontools</a> or
 <a href="https://smarden.org/runit/">runit</a> package.
-If you have additional run scripts or one of these run scripts works for you on
-an operating system not stated here, please
-<a href="mailto:supervision@list.skarnet.org">let me know</a>. 
 <p>
 Thanks go to the following people for contributing run scripts:
 <small>
@@ -27,10 +24,6 @@ Thomas Schwinge, Gael Canal, Woon Wai Keen, Richard A Downing, Phil Genera,
 Stefan Karrmann, Kevin Berry, Karl Chen, Sascha Huedepohl, Jason Smith,
 Kevin, marlowe, ed neville, xavier dutoit.
 </small>
-<p>
-See also
-<a href="http://thedjbway.org/services.html">here</a> for some more run
-scripts.
 <hr>
 <a href="#atftpd">atftpd</a><br>
 <a href="#apache">apache</a><br>
@@ -69,8 +62,6 @@ scripts.
 <a href="#klogd">klogd</a><br>
 <a href="#leafnode">leafnode</a><br>
 <a href="#loglinuxkernel">logging Linux kernel messages</a><br>
-<a href="http://multivac.cwru.edu./fdtools/grabconsole/">
-logging console messages</a><br>
 <a href="#mdadm">mdadm</a><br>
 <a href="#minidentd">minidentd</a><br>
 <a href="#mpd">mpd</a><br>
@@ -264,8 +255,6 @@ to be set up.
    $PREFIX/libexec/authlib/authvchkpw \
    $PREFIX/bin/imapd Maildir
 </pre>
-See also <a href="http://jonaspasche.de/courier-imap-daemontools.txt">
-this page</a>.
 <hr>
 <h3><a name="cron">A <tt>cron</tt> run script</a></h3>
 (<i>Debian sarge</i>)
