@@ -1,3 +1,4 @@
+  * doc/runscripts.html: remove broken links and reference to mailing list.
   * doc/replaceinit.html: switch http links to https.
   * alloc.c, alloc_re.c, buffer_0.c, byte.h, byte_chr.c, byte_copy.c,
     byte_cr.c, byte_diff.c, byte_rchr.c, select.h2, wait.h, wait_nohang.c,
